# aai

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.py
aai/: aai.py
aai/config/: __init__.py
aai/core/: cortex.py
aai/data/: __init__.py  dataset.py  hf.py  mixture.py  processors.py  tokenizers.py  utils.py
aai/metrics/: __init__.py  cross_entropy.py
aai/modeling/: __init__.py
aai/modeling/architectures/: __init__.py  clip.py  mamba.py  state.py  transformer.py  vit.py  whisper.py
aai/modeling/modules/: clib_blocks.py  emb.py  mamba_block.py  mlp.py  simple.py  transformer_block.py  vit_block.py  whisper_blocks.py
aai/modeling/modules/attentions/: __init__.py  attention.py  flash_attention.py  ring_attention.py  ring_attention_kernel.py
aai/modeling/optimizers/: __init__.py
aai/utils/: constants.py  logger.py  parser.py
configs/: clip.yaml  debug.yaml  default.yaml  mamba.yaml  vit.yaml  whisper.yaml
docker/: Dockerfile
infra/: tpus.sh
