[build-system]
requires = ["setuptools", "cython", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aai"
version = "0.0.0"
description = "ML Research ðŸª¼ â¤ï¸ ðŸŒŠ"
authors = [
    {name = "Amr Kayid", email = "amrmkayid@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = "==3.12.0"
dependencies = [
  "accelerate==1.2.1",
  "datasets==3.2.0",
  "docformatter>=1.7.5",
  "einops==0.8.0",
  "ipdb>=0.13.13",
  "ipykernel==6.29.5",
  "notebook==7.3.1",
  "pandas==2.2.3",
  "pre-commit>=4.0.1",
  "pydantic==2.10.3",
  "pylint>=3.3.2",
  "pyyaml==6.0.2",
  "rich==13.9.4",
  "ruff>=0.8.3",
  "torch==2.5.1",
  "torchaudio==2.5.1",
  "torchvision==0.20.1",
  "tqdm==4.67.1",
  "transformers==4.47.0",
  "wandb==0.19.1",
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.scripts]
aai = "aai.aai:main"


[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["aai"]
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"__init__.py" = ["D104"]
"tests/*" = ["D100", "D101", "D102", "D103", "D104"]

